# Neurokraken

./: .gitignore  README.md  config2teensy.py  environment.yml  kraken.bat  kraken.py  license.txt  pyproject.toml
examples/: agent_learning.py  agent_simple.py  blink.py  corridor_3d.py  display.py  doom.py  dot_motion.py  dot_motion_advanced.py  game.py  gui_krakengui.py  introduction.py  minimal.py  pong.py  pyproject.toml  quickstart.py  steering_advanced.py  steering_simple.py  tracked_shuttle.py
examples/assets/: corridor.blend  corridor.mtl
examples/runner_mode/: README.md  config.py  launch.py  task.py
neurokraken/: __init__.py  configurators.py  controls.py  neurokraken.py  tools.py
neurokraken/core/: cameras.py  main_loops.py  microphones.py  networker.py  print0.py  state_machine.py
teensy/: CapacitiveRead.h  DirectOn.h  PulseClock.h  RotEnc.h  Sensors.h  ServoMotor.h  StartStop.h  TimedOn.h  Tone.h  _DebugUtils.h  _Networker.h  _SSD1306Display.h  _Utils.h  teensy.ino
toolkit/cutie/: README.md  cutils.py  live_webcam_example.py  longterm_config.yaml  process_folder.py
toolkit/performance_test/: performance_test.py
toolkit/performance_test/stimulus/: stimulus.ino
toolkit/performance_test/tasks/: readAndControl3.py  readAndControl4.py  shuttle_tracked2.py  steering0.py  steering_camera1.py
toolkit/performance_test/test_pulse_clock/: test_pulse_clock.ino  test_pulse_clock.py
toolkit/valve_test/: valve_test.py
