
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"



[project]
name = "neurokraken"   # package name
version = "0.0.1"
description = "Neurokraken!"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"

# List of core dependencies - install or update with `pip install .`
dependencies = [
    'install-jdk',
    'py5',
    'opencv-python>=3.12',
    'pyserial',
    'keyboard',
    'psutil',
    'rich',
    'krakengui @ git+https://github.com/alexanderwallerus/kraken-gui@main',
    'matplotlib',
    'sounddevice',
    'soundfile',
    'imageio_ffmpeg'
]

# List of full dependencies - install with `pip install .[full]
[project.optional-dependencies]
full = [
    'pyside6',
    'imageio[ffmpeg]',
    'waitress',
    'flask',
    'vizdoom'
]


[tool.setuptools.packages.find]
where = ["."]
include = ["neurokraken", "neurokraken.*"] # everything in the neurokraken folder only
exclude = []